--- a/style.css
+++ b/style.css
@@ -90,9 +90,11 @@ width: 1000px;
 .main1-cont h2 {
   font-size: 28px;
   margin-bottom: 15px;
-  color:rgba(0, 0, 0, 0.669);
+  
 }
-
+.main1-cont h2 .span1{
+color:rgba(0, 0, 0, 0.669);
+}
 .main1-cont h2 .span2 {
    color: rgb(255, 145, 0);
 }
@@ -101,4 +103,44 @@ width: 1000px;
   line-height: 1.6;
   color: #333;
   font-size: 16px;
+}
+.main2-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin: 0 120px;
+ 
+}
+.main2head-cont h2{
+font-size: 40px;
+border-left: 4px solid rgb(255, 145, 0);
+padding-left: 8px;
+}
+.main2head-cont p{
+  color: #7b7b7b;
+}
+.mainsub-cont{
+  font-size: 15px;
+  padding: 2px 10px;
+box-shadow: 0 0 10px rgb(223, 217, 217);
+border-radius: 8px;
+margin-top: 10px;
+}
+.mainsub-cont p{
+  color: #7b7b7b;
+}
+.mainimg2-div img{
+  max-width: 480px;
+  
+}
+.img2-cont {
+  border: 1px solid rgb(255, 145, 0);
+  background-color: rgb(255, 145, 0);
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  border-radius: 8px;
+  text-align: center;
+  padding:0px 30px;
 }
