--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 400px) {
+@media (max-width: 500px) {
     .head1-div {
     display: flex;
     flex-direction: column;  
@@ -19,6 +19,26 @@ font-size:30px;
 }
 .mainimg-div img {
   width: 180px;
+}
+.main2-div {
+  display: flex;
+  flex-direction: column;
+margin-left: 20px;
+
+}
+.main2head-cont h2{
+font-size: 20px;
+}
+.mainsub-cont{
+  font-size: 10px;
+  padding-top: 10px;
+}
+.mainimg2-div img{
+  
+  max-width: 250px;
+}
+.img2-cont {
+  font-size: 10px;
 }
 }
     
