--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ color:rgba(0, 0, 0, 0.669);
 
 .main1-cont p {
   line-height: 1.6;
-  color: #333;
+  color: #7b7b7b;
   font-size: 16px;
 }
 .main2-div {
@@ -143,4 +143,42 @@ margin-top: 10px;
   border-radius: 8px;
   text-align: center;
   padding:0px 30px;
+}
+.main3-cont p{
+  color: #7b7b7b;
+  
+}
+.main3-icons{
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center; 
+}
+.main3-icons p{
+  color: #7b7b7b;
+}
+.main3-icons div{
+   border: 1px solid rgb(255, 145, 0);
+   
+   font-size: 12px;
+}
+
+.main3-icons img{
+width: 40px;
+}
+.main4-div {
+  text-align: center;
+}
+.main4-cont p {
+  color: #7b7b7b;
+}
+.main4-spon {
+  display: flex;
+  justify-content: space-evenly;
+}
+.main4-spon img {
+  filter: grayscale(100%);
+}
+.main4-right p{
+  color: #7b7b7b;
+  background-color: rgb(255, 237, 221);
 }
