--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,38 @@
+@media (min-width: 650px){
+.main3-div {
+  padding-top: 150px;
+  padding-left: 120px;
+  padding-right: 50px;
+}
+.main3-icons{
+  padding-top: 60px;
+}
+.main3-icons div {
+padding: 10px 40px;
+}
+.main4-div {
+  padding-top: 80px;
+}
+.main4-cont p{
+font-size: 12px;
+}
+.main4-spon {
+  padding: 20px 60px;
+
+}
+.main4-spon img {
+  width: 100px;
+}
+.main4-right{
+  padding: 40px 150px;
+}
+.main4-right p{
+  padding: 20px 10px;
+}
+}
+
+
+
 @media (max-width: 500px) {
     .head1-div {
     display: flex;
@@ -39,6 +74,39 @@ font-size: 20px;
 }
 .img2-cont {
   font-size: 10px;
+}
+.main3-div {
+  padding-top: 80px;
+  text-align: center;
+}
+.main3-cont{
+  font-size: 10px;
+ }  
+.main3-icons{
+  display: flex;
+}
+.main3-icons div{
+ font-size: 8px;
+ padding: 4px;
+}
+
+.main3-icons img{
+width: 20px;
+}
+.main4-div{
+  font-size: 10px;
+}
+.main4-spon {
+  padding-top: 20px;
+}
+.main4-spon img {
+  width: 40px;
+}
+.main4-right{
+  padding: 10px 25px;
+}
+.main4-right p{
+  padding: 8px;
 }
 }
     
