--- a/responsive.css
+++ b/responsive.css
@@ -1,112 +1,147 @@
-@media (min-width: 650px){
-.main3-div {
-  padding-top: 150px;
-  padding-left: 120px;
-  padding-right: 50px;
-}
-.main3-icons{
-  padding-top: 60px;
-}
-.main3-icons div {
-padding: 10px 40px;
-}
-.main4-div {
-  padding-top: 80px;
-}
-.main4-cont p{
-font-size: 12px;
-}
-.main4-spon {
-  padding: 20px 60px;
+@media (min-width: 650px) {
+  .main3-div {
+    padding-top: 150px;
+    padding-left: 120px;
+    padding-right: 50px;
+  }
 
-}
-.main4-spon img {
-  width: 100px;
-}
-.main4-right{
-  padding: 40px 150px;
-}
-.main4-right p{
-  padding: 20px 10px;
-}
+  .main3-icons {
+    padding-top: 60px;
+  }
+
+  .main3-icons div {
+    padding: 10px 40px;
+  }
+
+  .main4-div {
+    padding-top: 80px;
+  }
+
+  .main4-cont p {
+    font-size: 12px;
+  }
+
+  .main4-spon {
+    padding: 20px 60px;
+
+  }
+
+  .main4-spon img {
+    width: 100px;
+  }
+
+  .main4-right {
+    padding: 40px 150px;
+  }
+
+  .main4-right p {
+    padding: 20px 10px;
+  }
 }
 
+@media (max-width:360px) {
+  .img1-div img {
+    width: 360px;
+  }
 
+  .mainimg-div img {
+    width: 170px;
+  }
+}
 
 @media (max-width: 500px) {
-    .head1-div {
+  .head1-div {
     display: flex;
-    flex-direction: column;  
-}
-.img1-div img{
-width: 382.5px;
-}
-.head2-h1 {
-font-size:30px;
-}
-.head2-p{
+    flex-direction: column;
+  }
+
+  .img1-div img {
+    max-width: 382.5px;
+
+  }
+
+  .head2-h1 {
+    font-size: 30px;
+  }
+
+  .head2-p {
     font-size: 8px;
     font-weight: 600;
     width: 100%;
-}
-.head-list li a{
-  font-size: 12px;
-}
-.mainimg-div img {
-  width: 180px;
-}
-.main2-div {
-  display: flex;
-  flex-direction: column;
-margin-left: 20px;
+  }
 
-}
-.main2head-cont h2{
-font-size: 20px;
-}
-.mainsub-cont{
-  font-size: 10px;
-  padding-top: 10px;
-}
-.mainimg2-div img{
-  
-  max-width: 250px;
-}
-.img2-cont {
-  font-size: 10px;
-}
-.main3-div {
-  padding-top: 80px;
-  text-align: center;
-}
-.main3-cont{
-  font-size: 10px;
- }  
-.main3-icons{
-  display: flex;
-}
-.main3-icons div{
- font-size: 8px;
- padding: 4px;
-}
+  .head-list li a {
+    font-size: 12px;
+  }
 
-.main3-icons img{
-width: 20px;
+  .mainimg-div img {
+    max-width: 180px;
+  }
+
+  .main2-div {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+
+  }
+
+  .main2head-cont h2 {
+    font-size: 20px;
+  }
+
+  .mainsub-cont {
+    font-size: 10px;
+    padding-top: 10px;
+  }
+
+  .mainimg2-div img {
+
+    max-width: 250px;
+  }
+
+  .img2-cont {
+    font-size: 10px;
+  }
+
+  .main3-div {
+    padding-top: 80px;
+    text-align: center;
+  }
+
+  .main3-cont {
+    font-size: 10px;
+  }
+
+  .main3-icons {
+    display: flex;
+  }
+
+  .main3-icons div {
+    font-size: 8px;
+    padding: 4px;
+  }
+
+  .main3-icons img {
+    width: 20px;
+  }
+
+  .main4-div {
+    font-size: 10px;
+  }
+
+  .main4-spon {
+    padding-top: 20px;
+  }
+
+  .main4-spon img {
+    width: 40px;
+  }
+
+  .main4-right {
+    padding: 10px 25px;
+  }
+
+  .main4-right p {
+    padding: 8px;
+  }
 }
-.main4-div{
-  font-size: 10px;
-}
-.main4-spon {
-  padding-top: 20px;
-}
-.main4-spon img {
-  width: 40px;
-}
-.main4-right{
-  padding: 10px 25px;
-}
-.main4-right p{
-  padding: 8px;
-}
-}
-    
